--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -125,17 +125,38 @@ body{
 
 
 .services{
-    padding: 30px;
+    padding: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
     .service-card{
+        background-color: var(--color-5);
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.377);
+        border-radius: 5px;
         display: flex;
-        border: 1px solid red;
-        width: 450px;
-        padding: 20px ;
-        justify-content: space-between;
+        // border: 1px solid red;
+        width: 400px;
+        padding:30px 20px ;
+        align-items: flex-start  ;
+        justify-content: flex-start;
         column-gap: 30px;
         svg{
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
+            fill: var(--color-1);
+        }
+        h2{
+            font-family: var(--fontfamily-1);
+        }
+        p{
+            color: var(--color-3);
+            font-size: 1rem;
+            line-height: 25px;
+        }
+        .service-words{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
     }
 }
