--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -14,6 +14,7 @@
     }
     h1{
         margin: 0;
+        font-family: var(--fontfamily-1);
     }
     h2{
         margin: 0;
@@ -52,6 +53,7 @@ body{
         }
         svg{
             fill: var(--color-2);
+            transition: 0.5s;
         }
         &:hover{
             svg{
@@ -79,6 +81,7 @@ body{
             color: white;
             border-radius: 20px;
             font-size: 1.2rem;
+            transition: 1s;
         }
     }
 }
@@ -118,7 +121,7 @@ body{
     }
     .intro-picture{
         img{
-            width: 80%;
+            width: 100%;
         }
     }
 }
@@ -157,6 +160,144 @@ body{
             display: flex;
             flex-direction: column;
             gap: 10px;
+        }
+    }
+}
+
+
+.about{
+    .about-one{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        .about-img{
+            border-radius: 10px;
+            width: 30%;
+        }
+        h2{
+            font-weight: 500;
+            font-size: 1.1rem;
+            display: flex;
+            align-items: center;
+            column-gap: 10px;
+            color: var(--color-1);
+            hr{
+                width: 50px;
+                height: 1px;
+                margin: 0;
+                border: 1px solid var(--color-1);
+            }
+        }
+        .about-us{
+            width: 800px;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            a{
+                background-color: var(--color-1);
+                width: 150px;
+                color: var(--color-4);
+                padding:10px 20px;
+                border-radius: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .our-service{
+                img{
+                    border-radius: 10px;
+                }
+                display: flex;
+                justify-content: baseline;
+                align-items: center;
+                column-gap: 39px;
+                .our-service-one{
+                    display: flex;
+                    flex-direction: column;
+                    row-gap: 10px;
+                    p{
+                        border-bottom: 1px solid black;
+                        padding-bottom:10px ;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+.classes{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:30px;
+    h2{
+        font-weight: 500;
+        font-size: 1.1rem;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: var(--color-1);
+        hr{
+            width: 80px;
+            height: 1px;
+            border: 1px solid var(--color-1);
+        }
+    }
+    .classes-cards{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 30px;
+        .classes-card{
+            // border: 1px solid red;
+            box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.391);
+            width: 350px;
+            background: var(--color-5);
+            border-radius: 5px;
+            img{
+                width: 100%;
+                border-radius: 5px 5px 0 0;
+            }
+            .classes-card-one{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 20px;
+                padding: 15px;
+                width: 100%;
+                p{
+                    text-align: center;
+                }
+            }
+            .classes-card-two{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 10px;
+                table{
+                    border-collapse: collapse;
+                    td,th{
+                        width:150px;
+                        padding: 5px 5px;
+                    }
+                    td{
+                        border-bottom:1px solid var(--color-3);
+                    }
+                    th{
+                        border-bottom: 1px solid var(--color-3);
+                        border-right: 1px solid var(--color-3);
+                    }
+                    .no-bottom-border{
+                        border-bottom: none;
+                    }   
+                }
+            }
+            a{
+                background-color: var(--color-1);
+            }
         }
     }
 }
