--- a/kidkinder.css
+++ b/kidkinder.css
@@ -16,6 +16,7 @@
 }
 * h1 {
   margin: 0;
+  font-family: var(--fontfamily-1);
 }
 * h2 {
   margin: 0;
@@ -57,6 +58,7 @@ body {
 }
 .nav .nav-logo svg {
   fill: var(--color-2);
+  transition: 0.5s;
 }
 .nav .nav-logo:hover svg {
   fill: var(--color-1);
@@ -81,6 +83,7 @@ body {
   color: white;
   border-radius: 20px;
   font-size: 1.2rem;
+  transition: 1s;
 }
 
 .intro {
@@ -117,7 +120,7 @@ body {
   font-family: var(--fontfamily-1);
 }
 .intro .intro-picture img {
-  width: 80%;
+  width: 100%;
 }
 
 .services {
@@ -155,4 +158,139 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.about .about-one {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.about .about-one .about-img {
+  border-radius: 10px;
+  width: 30%;
+}
+.about .about-one h2 {
+  font-weight: 500;
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  color: var(--color-1);
+}
+.about .about-one h2 hr {
+  width: 50px;
+  height: 1px;
+  margin: 0;
+  border: 1px solid var(--color-1);
+}
+.about .about-one .about-us {
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.about .about-one .about-us a {
+  background-color: var(--color-1);
+  width: 150px;
+  color: var(--color-4);
+  padding: 10px 20px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about .about-one .about-us .our-service {
+  display: flex;
+  justify-content: baseline;
+  align-items: center;
+  -moz-column-gap: 39px;
+       column-gap: 39px;
+}
+.about .about-one .about-us .our-service img {
+  border-radius: 10px;
+}
+.about .about-one .about-us .our-service .our-service-one {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.about .about-one .about-us .our-service .our-service-one p {
+  border-bottom: 1px solid black;
+  padding-bottom: 10px;
+}
+
+.classes {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+.classes h2 {
+  font-weight: 500;
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--color-1);
+}
+.classes h2 hr {
+  width: 80px;
+  height: 1px;
+  border: 1px solid var(--color-1);
+}
+.classes .classes-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+.classes .classes-cards .classes-card {
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.391);
+  width: 350px;
+  background: var(--color-5);
+  border-radius: 5px;
+}
+.classes .classes-cards .classes-card img {
+  width: 100%;
+  border-radius: 5px 5px 0 0;
+}
+.classes .classes-cards .classes-card .classes-card-one {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 15px;
+  width: 100%;
+}
+.classes .classes-cards .classes-card .classes-card-one p {
+  text-align: center;
+}
+.classes .classes-cards .classes-card .classes-card-two {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.classes .classes-cards .classes-card .classes-card-two table {
+  border-collapse: collapse;
+}
+.classes .classes-cards .classes-card .classes-card-two table td, .classes .classes-cards .classes-card .classes-card-two table th {
+  width: 150px;
+  padding: 5px 5px;
+}
+.classes .classes-cards .classes-card .classes-card-two table td {
+  border-bottom: 1px solid var(--color-3);
+}
+.classes .classes-cards .classes-card .classes-card-two table th {
+  border-bottom: 1px solid var(--color-3);
+  border-right: 1px solid var(--color-3);
+}
+.classes .classes-cards .classes-card .classes-card-two table .no-bottom-border {
+  border-bottom: none;
+}
+.classes .classes-cards .classes-card a {
+  background-color: var(--color-1);
 }/*# sourceMappingURL=kidkinder.css.map */
