--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -228,7 +228,7 @@ body{
 
 
 .classes{
-    padding: 30px;
+    padding: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -256,6 +256,10 @@ body{
             width: 350px;
             background: var(--color-5);
             border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             img{
                 width: 100%;
                 border-radius: 5px 5px 0 0;
@@ -270,6 +274,11 @@ body{
                 width: 100%;
                 p{
                     text-align: center;
+                    color: var(--color-3);
+                    font-size: 0.9rem;
+                }
+                h1{
+                    font-size: 1.5rem;
                 }
             }
             .classes-card-two{
@@ -289,6 +298,7 @@ body{
                     th{
                         border-bottom: 1px solid var(--color-3);
                         border-right: 1px solid var(--color-3);
+                        color: rgba(0, 0, 0, 0.502);
                     }
                     .no-bottom-border{
                         border-bottom: none;
@@ -297,6 +307,132 @@ body{
             }
             a{
                 background-color: var(--color-1);
+                color: var(--color-5);
+                text-align: center;
+                display:flex;
+                align-items: center;
+                justify-content: center;
+                width: 100px;
+                margin: 10px;
+                padding: 5px 10px;
+                border-radius: 20px;
+                font-size: 0.9rem;
+            }
+        }
+    }
+}
+
+
+.booking{
+    padding: 30px;
+    display:flex;
+    // border: 1px solid red;
+    justify-content: space-around;
+    .booking-one{
+        width: 55%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        a{
+            background-color: var(--color-1);
+            color: var(--color-5);
+            text-align: center;
+            display:flex;
+            align-items: center;
+            justify-content: center;
+            width: 100px;
+            margin: 10px;
+            padding: 10px 15px;
+            border-radius: 20px;
+            font-size: 0.9rem;  
+        }
+        h2{
+            display: flex;
+            align-items: center;
+            font-size: 1.1rem;
+            font-weight: 500;
+            color: var(--color-1);
+            gap: 10px;
+            hr{
+                margin: 0;
+                width: 50px;
+                height: 1px;
+                border: 1px solid var(--color-1);
+            }
+        }
+        .booking-check{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            p{
+                font-size: 0.9rem;
+            }
+            svg{
+                width: 25px;
+                height: 25px;
+                fill:var(--color-1);
+            }
+            .booking-check-one{
+                display: flex;
+                align-items: center;
+                column-gap: 10px;
+
+            }
+        }
+    }
+    .booking-two{
+        // border: 1px solid red;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .booking-form{
+            background-color: var(--color-2);
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px 0;
+            border-radius: 5px 5px 0 0;
+            h1{
+                color:var(--color-4);
+            }
+        }
+        form{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap:20px;
+            background-color: var(--color-1);
+            height: 100%;
+            width: 100%;
+            padding: 20px 0;
+            border-radius: 0 0 5px 5px;
+            input{
+                width: 350px;
+                background-color: var(--color-4);
+                padding: 15px 35px;
+                border-radius: 10px;
+                border: none;
+                outline: none;
+            }
+            select{
+                width: 350px;
+                background-color: var(--color-4);
+                padding: 15px 35px;
+                border-radius: 10px;
+                border: none;
+                outline: none;
+            }
+            button{
+                width: 350px;
+                background-color: var(--color-4);
+                padding: 15px 35px;
+                border-radius: 10px;
+                border: none;
+                outline: none;
+                background-color: var(--color-2);
+                color: var(--color-4);
             }
         }
     }
