--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -36,6 +36,8 @@ body{
     position: sticky;
     top: 0;
     background-color: var(--color-4);
+    opacity: 1;
+    z-index: 1;
     svg{
         width: 70px;
         height: 70px;
@@ -433,6 +435,103 @@ body{
                 outline: none;
                 background-color: var(--color-2);
                 color: var(--color-4);
+            }
+        }
+    }
+}
+
+
+.teachers{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    h2{
+        font-size: 1.1rem;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: var(--color-1);
+        hr{
+            width: 50px;
+            height: 1px;
+            border: 1px solid var(--color-1);
+        }
+    }
+    p{
+        font-family: var(--fontfamily-1);
+        font-size: 1.2rem;
+    }
+    .teachers-cards{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 50px;
+        .teachers-card{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            // border: 1px solid red;
+            gap: 10px;
+            width: 250px;
+            &:hover{
+                .teachers-card-one{
+                    .teachers-links{
+                        opacity: 1;
+                    }
+                }
+            }
+            .teachers-card-one{
+                // border: 1px solid red;
+                width: 250px;
+                height: 250px;
+                border-radius: 50%;
+                position: relative;
+                svg{
+                    width: 20px;
+                    height: 20px;
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 100%;
+                }
+                .teachers-links{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 100%;
+                    left: 0;
+                    top: 0;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    // border: 1px solid red;
+                    background-color: #17a3b8b5;
+                    gap: 20px;
+                    opacity: 0;
+                    transition: 0.5s;
+                    a{
+                        border: 1px solid white;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 10px;
+                        border-radius: 50%;
+                        transition: 1s;
+                        svg{
+                            fill: var(--color-4);
+                            transition: 1s;
+                        }
+                        &:hover{
+                            background-color: var(--color-4);
+                            svg{
+                                fill: black;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
