--- a/kidkinder.css
+++ b/kidkinder.css
@@ -10,6 +10,7 @@
 * {
   font-family: poppins, sans-serif;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 * a {
   text-decoration: none;
@@ -517,4 +518,84 @@ body {
 }
 .teachers .teachers-cards .teachers-card .teachers-card-one .teachers-links a:hover svg {
   fill: black;
+}
+
+.testimony {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 50px;
+  gap: 20px;
+}
+.testimony h2 {
+  display: flex;
+  align-items: center;
+  font-size: 1.1rem;
+  font-weight: 500;
+  gap: 10px;
+  color: var(--color-1);
+}
+.testimony h2 hr {
+  width: 50px;
+  height: 1px;
+  border: 1px solid var(--color-1);
+}
+.testimony .testimony-cards {
+  overflow: auto;
+  overflow-x: hidden;
+  width: 95%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.testimony .testimony-cards a {
+  background: var(--color-1);
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+.testimony .testimony-cards .testimony-card {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 450px;
+  transition: 0.5s;
+}
+.testimony .testimony-cards .testimony-card .testimony-card-one {
+  width: 400px;
+  padding: 10px 20px;
+  background-color: var(--color-5);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.267);
+  border-radius: 5px;
+}
+.testimony .testimony-cards .testimony-card .testimony-card-one svg {
+  width: 40px;
+  height: 40px;
+  fill: var(--color-1);
+  margin: 0;
+}
+.testimony .testimony-cards .testimony-card .testimony-card-two {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.testimony .testimony-cards .testimony-card .testimony-card-two img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+.testimony .testimony-cards .testimony-card .testimony-card-two .parents-name h1 {
+  font-size: 1.5rem;
+  color: var(--color-2);
+}
+.testimony .slide {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+}
+.testimony .slide .slide-one {
+  width: 15px;
+  height: 15px;
+  background-color: var(--color-1);
+  border-radius: 50%;
 }/*# sourceMappingURL=kidkinder.css.map */
