--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -9,6 +9,7 @@
 *{
     font-family: poppins , sans-serif;
     box-sizing: border-box;
+    scroll-behavior: smooth;
     a{
         text-decoration: none;
     }
@@ -533,6 +534,92 @@ body{
                     }
                 }
             }
+        }
+    }
+}
+
+
+
+.testimony{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px;
+    gap: 20px;
+    h2{
+        display: flex;
+        align-items: center;
+        font-size: 1.1rem;
+        font-weight: 500;
+        gap: 10px;
+        color: var(--color-1);
+        hr{
+            width: 50px;
+            height: 1px;
+            border: 1px solid var(--color-1);
+        }
+    }
+    .testimony-cards{
+        overflow: auto;
+        overflow-x: hidden;
+        width: 95%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        a{
+            background: var(--color-1);
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+        }
+        .testimony-card{
+            // border: 1px solid red;   
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            width: 450px;
+            transition: 0.5s;
+            .testimony-card-one{
+                // border: 1px solid red;
+                width: 400px;
+                padding: 10px 20px;
+                background-color: var(--color-5);
+                box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.267);
+                border-radius: 5px;
+                svg{
+                    width: 40px;
+                    height: 40px;
+                    fill: var(--color-1); 
+                    margin: 0;
+                }
+            }
+            .testimony-card-two{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                img{
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 50%;
+                }
+                .parents-name{
+                    h1{
+                        font-size: 1.5rem;
+                        color: var(--color-2);
+                    }
+                }
+            }
+        }
+    }
+    .slide{
+        display: flex;
+        gap: 20px;
+        padding: 20px;
+        .slide-one{
+            width: 15px;
+            height: 15px;
+            background-color: var(--color-1);
+            border-radius: 50%;
         }
     }
 }
