--- a/kidkinder.css
+++ b/kidkinder.css
@@ -72,6 +72,9 @@ body {
   -moz-column-gap: 35px;
        column-gap: 35px;
 }
+.nav .nav-links .on {
+  color: var(--color-1);
+}
 .nav .nav-links a {
   color: var(--color-3);
   font-size: 1.1rem;
@@ -572,7 +575,6 @@ body {
   width: 40px;
   height: 40px;
   fill: var(--color-1);
-  margin: 0;
 }
 .testimony .testimony-cards .testimony-card .testimony-card-two {
   display: flex;
@@ -585,7 +587,7 @@ body {
   border-radius: 50%;
 }
 .testimony .testimony-cards .testimony-card .testimony-card-two .parents-name h1 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: var(--color-2);
 }
 .testimony .slide {
@@ -598,4 +600,227 @@ body {
   height: 15px;
   background-color: var(--color-1);
   border-radius: 50%;
+}
+
+.blog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 60px;
+}
+.blog h2 {
+  display: flex;
+  font-weight: 500;
+  font-size: 1.1rem;
+  align-items: center;
+  gap: 10px;
+  color: var(--color-1);
+}
+.blog h2 hr {
+  width: 50px;
+  height: 1px;
+  border: 1px solid var(--color-1);
+}
+.blog .blog-cards {
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+.blog .blog-cards .blog-card {
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.253);
+  border-radius: 5px;
+}
+.blog .blog-cards .blog-card img {
+  width: 100%;
+  border-radius: 5px 5px 0 0;
+}
+.blog .blog-cards .blog-card .blog-card-one {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+  padding: 10px 4px;
+  background-color: var(--color-5);
+  border-radius: 0 0 5px 5px;
+}
+.blog .blog-cards .blog-card .blog-card-one h1 {
+  font-size: 1.5rem;
+}
+.blog .blog-cards .blog-card .blog-card-one p {
+  font-size: 0.9rem;
+  align-items: center;
+}
+.blog .blog-cards .blog-card .blog-card-one .blog-comments {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin: 10px;
+}
+.blog .blog-cards .blog-card .blog-card-one .blog-comments svg {
+  width: 20px;
+  height: 20px;
+  fill: var(--color-1);
+}
+.blog .blog-cards .blog-card .blog-card-one .blog-comments .blog-comments-one {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+.blog .blog-cards .blog-card .blog-card-one a {
+  background-color: var(--color-1);
+  padding: 10px 20px;
+  color: var(--color-4);
+  border-radius: 20px;
+}
+
+.end {
+  background-color: var(--color-2);
+  padding: 20px;
+}
+.end h1 {
+  color: var(--color-1);
+  font-weight: 500;
+  font-size: 1.7rem;
+}
+.end svg {
+  width: 60px;
+  height: 60px;
+}
+.end h2 {
+  font-family: var(--fontfamily-1);
+}
+.end .end-one {
+  display: flex;
+  justify-content: space-around;
+  color: var(--color-4);
+}
+.end .end-one .end-sites {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.end .end-one .end-sites svg {
+  width: 40px;
+  height: 40px;
+}
+.end .end-one .end-sites .sites {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.end .end-one .end-sites .sites svg {
+  width: 15px;
+  height: 15px;
+  fill: var(--color-1);
+}
+.end .end-one .end-sites .sites a {
+  border: 1px solid var(--color-1);
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 50%;
+}
+.end .end-one .end-sites a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.end .end-one .end-sites a svg {
+  fill: var(--color-1);
+}
+.end .end-one .end-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.end .end-one .end-contacts h2 {
+  font-size: 1.2rem;
+}
+.end .end-one .end-contacts svg {
+  width: 30px;
+  height: 30px;
+  fill: var(--color-1);
+}
+.end .end-one .end-contacts .end-contacts-one {
+  display: flex;
+  gap: 10px;
+}
+.end .end-one .end-links {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.end .end-one .end-links .end-links-one {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.end .end-one .end-links svg {
+  width: 20px;
+  height: 20px;
+  fill: var(--color-4);
+}
+.end .end-one .end-links a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--color-4);
+}
+.end .end-one .ends-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.end .end-one .ends-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.end .end-one .ends-form form input {
+  width: 300px;
+  padding: 15px 25px;
+  outline: none;
+  border-radius: 15px;
+}
+.end .end-one .ends-form form button {
+  width: 300px;
+  padding: 15px 0px;
+  background-color: var(--color-1);
+  border-radius: 20px;
+  outline: none;
+  border: none;
+  color: var(--color-4);
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+.end .end-two {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  gap: 20px;
+  padding: 10px;
+}
+.end .end-two hr {
+  width: 95%;
+  border: 1px solid var(--color-1);
+}
+.end .end-two a {
+  color: var(--color-1);
+}
+.end .end-two a:hover {
+  text-decoration: underline;
+}
+.end .end-two .end-copyright {
+  display: flex;
 }/*# sourceMappingURL=kidkinder.css.map */
