--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -68,6 +68,9 @@ body{
         display: flex;
         align-items: center;
         column-gap: 35px;
+        .on{
+            color: var(--color-1);
+        }
         a{
             color:var(--color-3);
             font-size: 1.1rem;
@@ -590,7 +593,6 @@ body{
                     width: 40px;
                     height: 40px;
                     fill: var(--color-1); 
-                    margin: 0;
                 }
             }
             .testimony-card-two{
@@ -604,7 +606,7 @@ body{
                 }
                 .parents-name{
                     h1{
-                        font-size: 1.5rem;
+                        font-size: 1.2rem;
                         color: var(--color-2);
                     }
                 }
@@ -620,6 +622,236 @@ body{
             height: 15px;
             background-color: var(--color-1);
             border-radius: 50%;
+        }
+    }
+}
+
+
+
+.blog{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 60px;
+    h2{
+        display: flex;
+        font-weight: 500;
+        font-size: 1.1rem;
+        align-items: center;
+        gap: 10px;
+        color: var(--color-1);
+        hr{
+            width: 50px;
+            height: 1px;
+            border: 1px solid var(--color-1);
+        }
+    }
+    .blog-cards{
+        padding: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 30px;
+        .blog-card{
+            // border: 1px solid red;
+            width: 350px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.253);
+            border-radius: 5px;
+            img{
+                width: 100%;
+                // height: 100px;
+                // object-fit: cover;
+                border-radius: 5px 5px 0 0;
+            }
+            .blog-card-one{
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                gap: 5px;
+                padding: 10px 4px;
+                background-color: var(--color-5);
+                border-radius: 0 0 5px 5px;
+                h1{
+                    font-size: 1.5rem;
+                }
+                p{
+                    font-size: 0.9rem;
+                    align-items: center;
+                }
+                .blog-comments{
+                    display: flex;
+                    align-items: center;
+                    gap: 15px;
+                    margin: 10px;
+                    svg{
+                        width:20px;
+                        height: 20px;
+                        fill: var(--color-1);
+                    }
+                    .blog-comments-one{
+                        display: flex;
+                        align-items: center;
+                        gap: 2px;
+                    }
+                }
+                a{
+                    background-color: var(--color-1);
+                    padding: 10px 20px;
+                    color: var(--color-4);
+                    border-radius: 20px;
+                }
+            }
+        }
+    }
+}
+
+
+.end{
+    background-color: var(--color-2);
+    padding: 20px;
+    h1{
+        color: var(--color-1);
+        font-weight: 500;
+        font-size: 1.7rem;
+    }
+    svg{
+        width: 60px;
+        height: 60px;
+    }
+    h2{
+        font-family: var(--fontfamily-1);
+    }
+    .end-one{
+        display: flex;
+        justify-content: space-around;
+        color: var(--color-4);
+        .end-sites{
+            width: 300px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            svg{
+                width: 40px;
+                height: 40px;
+            }
+            .sites{
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                svg{
+                    width: 15px;
+                    height: 15px;
+                    fill: var(--color-1);
+                }
+                a{
+                    border: 1px solid var(--color-1);
+                    display: flex;
+                    align-items: center;
+                    padding: 10px;
+                    border-radius: 50%;
+                }
+            }
+            a{
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                svg{
+                    fill: var(--color-1);
+                }
+            }
+        }
+        .end-contacts{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            h2{
+                font-size: 1.2rem;
+            }
+            svg{
+                width: 30px;
+                height: 30px;
+                fill: var(--color-1);
+            }
+            .end-contacts-one{
+                display: flex;
+                gap: 10px;
+
+            }
+        }
+        .end-links{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            .end-links-one{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+            }
+          svg{
+            width: 20px;
+            height: 20px;
+            fill: var(--color-4);
+          }
+          a{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            color: var(--color-4);
+          }  
+        }
+        .ends-form{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            form{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 20px;
+                input{
+                    width: 300px;
+                    padding: 15px 25px;
+                    outline: none;
+                    border-radius: 15px;
+                }
+                button{
+                    width: 300px;
+                    padding: 15px 0px;
+                    background-color: var(--color-1);
+                    border-radius: 20px;
+                    outline: none;
+                    border: none;
+                    color: var(--color-4);
+                    font-size: 1.1rem;
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+    .end-two{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        gap:20px;
+        padding: 10px;
+        hr{
+            width: 95%;
+            border: 1px solid var(--color-1);
+        }
+        a{
+            color: var(--color-1);
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+        .end-copyright{
+            display: flex;
         }
     }
 }
