--- a/kidkinder.css
+++ b/kidkinder.css
@@ -166,6 +166,9 @@ body {
   gap: 10px;
 }
 
+.about {
+  padding: 30px;
+}
 .about .about-one {
   display: flex;
   justify-content: center;
@@ -439,6 +442,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  padding: 30px;
 }
 .teachers h2 {
   font-size: 1.1rem;
@@ -823,4 +827,29 @@ body {
 }
 .end .end-two .end-copyright {
   display: flex;
+}
+
+.all-intro {
+  background-color: var(--color-1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 10px;
+}
+.all-intro h1 {
+  color: var(--color-4);
+  font-size: 5rem;
+  font-weight: 500;
+}
+.all-intro p {
+  color: var(--color-4);
+}
+.all-intro .all-intro-one {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.all-intro .all-intro-one a {
+  color: var(--color-4);
 }/*# sourceMappingURL=kidkinder.css.map */
