--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -172,6 +172,7 @@ body{
 
 
 .about{
+    padding: 30px;
     .about-one{
         display: flex;
         justify-content: center;
@@ -450,6 +451,7 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    padding: 30px;
     h2{
         font-size: 1.1rem;
         font-weight: 500;
@@ -852,6 +854,33 @@ body{
         }
         .end-copyright{
             display: flex;
+        }
+    }
+}
+
+
+
+.all-intro{
+    background-color: var(--color-1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 10px;
+    h1{
+        color: var(--color-4);
+        font-size: 5rem;
+        font-weight: 500;
+    }
+    p{
+        color: var(--color-4);
+    }
+    .all-intro-one{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        a{
+            color: var(--color-4);
         }
     }
 }
