--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -10,6 +10,7 @@
     font-family: poppins , sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    border: 1px solid red;
     a{
         text-decoration: none;
     }
@@ -88,6 +89,13 @@ body{
             border-radius: 20px;
             font-size: 1.2rem;
             transition: 1s;
+        }
+    }
+    .menu{
+        display: none;
+        svg{
+            width: 40px;
+            height: 40px;
         }
     }
 }
@@ -416,7 +424,7 @@ body{
             padding: 20px 0;
             border-radius: 0 0 5px 5px;
             input{
-                width: 350px;
+                width: 95%;
                 background-color: var(--color-4);
                 padding: 15px 35px;
                 border-radius: 10px;
@@ -424,7 +432,7 @@ body{
                 outline: none;
             }
             select{
-                width: 350px;
+                width: 95%;
                 background-color: var(--color-4);
                 padding: 15px 35px;
                 border-radius: 10px;
@@ -432,7 +440,7 @@ body{
                 outline: none;
             }
             button{
-                width: 350px;
+                width: 95%;
                 background-color: var(--color-4);
                 padding: 15px 35px;
                 border-radius: 10px;
@@ -881,6 +889,191 @@ body{
         gap: 10px;
         a{
             color: var(--color-4);
+        }
+    }
+}
+
+
+@media (max-width:1286px) {
+    .services{
+        padding: 20px;
+      .service-card{
+        width: 350px;
+      }
+    }
+}
+
+
+
+@media (max-width:1206px) {
+    .nav{
+        justify-content: space-between;
+        .nav-links{
+            // height: 300px;
+            top:95px;
+            position: absolute;
+            background-color:var(--color-5);
+            justify-content: start;
+            align-items: flex-start;
+            left:-300px;
+            width: 300px;
+            height: 700px;
+            padding: 40px 20px;
+            flex-direction: column;
+            gap: 50px;
+            transition: 0.3s;
+        }
+        .onclick{
+            left: 0;
+            .nav-join{
+                background-color: red;
+            }
+        }
+        .nav-join{
+            display: none;
+        }
+        .menu{
+            display: block;
+        }
+    }
+    .services{
+        padding: 20px;
+        .service-card{
+            // padding: 20px;
+        }
+    }
+}
+
+@media (max-width:1168px) {
+    .teachers{
+        .teachers-cards{
+            grid-template-columns: 1fr 1fr 1fr;
+            .teachers-card{
+
+            }
+        }
+    }
+    .blog{
+        .blog-cards{
+            gap: 10px;
+        }
+    }
+}
+
+
+@media (max-width:1140px) {
+    .blog{
+        .blog-cards{
+            .blog-card{
+                width: 320px;
+            }
+        }
+    }
+    .classes{
+        .classes-cards{
+            gap: 10px;
+            .classes-card{
+                width: 320px;
+            }
+        }
+    }
+    .services{
+        gap: 5px;
+        .service-card{
+            width:320px ;
+        }
+    }
+    .blog{
+        .blog-cards{
+            gap: 10px;
+        }
+    }
+}
+
+
+@media (max-width:1018px) {
+    .blog{
+        .blog-cards{
+            gap: 4px;
+        }
+    }
+    .classes{
+        .classes-cards{
+            gap: 7px;
+        }
+    }
+}
+
+@media (max-width:1015px) {
+    .blog{
+        .blog-cards{
+            .blog-card{
+                width: 300px;
+            }
+        }
+    }
+}
+
+
+@media (max-width:1004px) {
+    .services{
+        grid-template-columns: 1fr 1fr;
+        .service-card{
+            width: 400px;
+        }
+    }
+    .end{
+        .end-one{
+            flex-direction: column;
+            gap: 10px;
+        }
+    }
+}
+
+
+@media (max-width:992px) {
+    .classes{
+        .classes-cards{
+            .classes-card{
+                width: 300px;
+            }
+        }
+    }
+    .blog{
+        .blog-cards{
+            gap: 5px;
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+}
+
+@media (max-width:930px) {
+    .classes{
+        .classes-cards{
+            gap: 10px;
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+}
+
+
+@media (max-width:863px) {
+    .teachers{
+        .teachers-cards{
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+    .booking{
+        .booking-one{
+            width: 85%;
+        }
+        gap: 20px;
+        flex-direction: column;
+        .booking-two{
+            width: 85%;
+            .booking-form{
+                width: 100%;
+            }
         }
     }
 }
