--- a/kidkinder.css
+++ b/kidkinder.css
@@ -11,7 +11,6 @@
   font-family: poppins, sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  border: 1px solid red;
 }
 * a {
   text-decoration: none;
@@ -1080,5 +1079,77 @@ body {
   }
   .classes .classes-cards .classes-card {
     width: 100%;
+  }
+}
+@media (max-width: 564px) {
+  .booking .booking-two {
+    width: 100%;
+  }
+  .teachers .teachers-cards {
+    gap: 10px;
+  }
+  .teachers .teachers-cards .teachers-card {
+    width: 220px;
+  }
+  .teachers .teachers-cards .teachers-card .teachers-card-one {
+    width: 100%;
+  }
+}
+@media (max-width: 468px) {
+  body {
+    font-size: 15px;
+  }
+  .teachers .teachers-cards {
+    width: 70%;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .teachers .teachers-cards .teachers-card {
+    width: 100%;
+  }
+  .teachers .teachers-cards .teachers-card .teachers-card-one {
+    width: 100%;
+    border: 1px solid blue;
+  }
+  .nav .nav-logo {
+    gap: 5px;
+  }
+  .nav .nav-logo h1 {
+    font-size: 2rem;
+  }
+  .nav .nav-logo svg {
+    width: 45px;
+    height: 45px;
+  }
+  .about .about-one .about-img {
+    width: 100%;
+  }
+  .classes {
+    padding: 0px 20px;
+  }
+  .classes .classes-cards {
+    width: 100%;
+  }
+  .blog {
+    padding: 0px 20px;
+  }
+  .blog .blog-cards {
+    width: 100%;
+  }
+  .intro {
+    padding: 10px 20px;
+  }
+  .intro .intro-words {
+    width: 100%;
+  }
+  .booking .booking-one {
+    width: 100%;
+  }
+  .services {
+    width: 100%;
+    padding: 10px;
+  }
+  .services .service-card {
+    width: 90%;
   }
 }/*# sourceMappingURL=kidkinder.css.map */
