--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -1257,12 +1257,16 @@ body{
         .nav-logo{
             gap: 5px;
             h1{
-                font-size: 2rem;
+                font-size: 1.9rem;
             }
             svg{
                 width: 45px;
                 height: 45px;
             }
+        }
+        .nav-links{
+            width: 200px;
+            top: 70px;
         }
     }
 
@@ -1276,6 +1280,12 @@ body{
 
     .classes{
         padding:0px 20px ;
+        h2{
+            font-size: 1rem;
+            hr{
+                width: 30px;
+            }
+        }
         .classes-cards{
             width: 100%;
         }
