--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -910,13 +910,13 @@ body{
         justify-content: space-between;
         .nav-links{
             // height: 300px;
-            top:95px;
+            top:92px;
             position: absolute;
             background-color:var(--color-5);
             justify-content: start;
             align-items: flex-start;
             left:-300px;
-            width: 300px;
+            width: 250px;
             height: 700px;
             padding: 40px 20px;
             flex-direction: column;
@@ -1158,6 +1158,12 @@ body{
             .classes-card{
                 width: 310px;
             }
+        }
+    }
+
+    .all-intro{
+        h1{
+            font-size: 3rem;
         }
     }
 }
