--- a/kidkinder.css
+++ b/kidkinder.css
@@ -8,7 +8,7 @@
 }
 
 * {
-  font-family: poppins, sans-serif;
+  font-family: sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
@@ -1179,7 +1179,7 @@ body {
     width: 80%;
   }
   .classes {
-    padding: 0px 10px;
+    padding: 10px 10px;
   }
   .classes .classes-cards {
     width: 100%;
@@ -1188,7 +1188,7 @@ body {
     width: 100%;
   }
   .booking {
-    padding: 10px 0px;
+    padding: 10px 10px;
   }
   .teachers .teachers-cards {
     width: 100%;
@@ -1215,7 +1215,7 @@ body {
     width: 100%;
   }
   .classes {
-    padding: 10px 5px;
+    padding: 10px 10px;
   }
   .classes .classes-cards .classes-card {
     width: 90%;
