--- a/kidkinder.scss
+++ b/kidkinder.scss
@@ -25,11 +25,11 @@
         margin: 0;
     }
 }
+::selection{
+    background-color: var(--color-1);
+}
 body{
     margin: 0;
-    &::selection{
-        background-color: var(--color-1);
-    }
 }
 
 .nav{
